fix editor config