@@ -44,6 +44,11 @@
         <maven-site-plugin.version>4.0.0-M15</maven-site-plugin.version>
 
         <maven-site-plugin.version>4.0.0-M15</maven-site-plugin.version>
+
+        <!-- Sonar -->
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.language>java</sonar.language>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -368,7 +373,7 @@
                         </goals>
                         <configuration>
                             <!--suppress UnresolvedMavenProperty -->
-                            <argLine>${argLine}</argLine>
+                            <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                             <includes>
                                 <include>**/*Tests.java</include>
                                 <include>**/*Test.java</include>
@@ -388,7 +393,7 @@
                         <configuration>
                             <skipAfterFailureCount>1</skipAfterFailureCount>
                             <!--suppress UnresolvedMavenProperty -->
-                            <argLine>${argLine}</argLine>
+                            <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                             <parallel>none</parallel>
                             <includes>
                                 <include>**/*IT.java</include>
@@ -408,7 +413,7 @@
                         </goals>
                         <configuration>
                             <!--suppress UnresolvedMavenProperty -->
-                            <argLine>${argLine}</argLine>
+                            <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                             <includes>
                                 <include>**/*BPM.java</include>
                             </includes>
